@@ -55,8 +55,10 @@ PROJ_HEAD(laea, "Lambert Azimuthal Equal Area")
 PROJ_HEAD(lagrng, "Lagrange")
 PROJ_HEAD(larr, "Larrivee")
 PROJ_HEAD(lask, "Laskowski")
-PROJ_HEAD(latlong, "Lat/long (Geodetic)")
-PROJ_HEAD(longlat, "Lat/long (Geodetic)")
+PROJ_HEAD(lonlat, "Lat/long (Geodetic)")
+PROJ_HEAD(latlon, "Lat/long (Geodetic alias)")
+PROJ_HEAD(latlong, "Lat/long (Geodetic alias)")
+PROJ_HEAD(longlat, "Lat/long (Geodetic alias)")
 PROJ_HEAD(lcc, "Lambert Conformal Conic")
 PROJ_HEAD(lcca, "Lambert Conformal Conic Alternative")
 PROJ_HEAD(leac, "Lambert Equal Area Conic")
